perf+polish: cache regexes, share httpx pool, tighten types and constants
Java extension
- util/PatternCache: bounded LRU of compiled patterns. MatcherEngine,
  MacroHandler.extractValue, and FuzzHandler.extractPattern now route
  through it instead of recompiling per evaluation. KB regexes are
  evaluated thousands of times across one auto_probe run.
- ScannerHandler.handleCancelScan: return 400 with a clear message on
  malformed scan id paths instead of "Scan #-1 not found".
- AttackHandler.handleAuthMatrix: instanceof-guard the 'auth_states'
  cast so a list payload returns 400 with guidance instead of a 500.
- CollaboratorHandler.replaceQueryParam/replaceBodyParam: replace
  URLEncoder.encode(s, "UTF-8") (throws UnsupportedEncodingException)
  with the StandardCharsets.UTF_8 overload.

Python MCP server
- client.py: replace per-call AsyncClient with a lazy shared client
  + lock so HTTP keep-alive actually works. Added aclose() for
  shutdown.
- advisor.py: drop the redundant `import re as _re_q6` mid-function
  and use the module-level `re` import that was already there.
- tools/repeater.py: drop unused `import json`; cap rendered response
  body at 5000 chars so a 1MB asset doesn't blow up the tool reply.
- tools/notes.export_report: serialise via json.dumps for the json
  format instead of str(dict) (which produces Python repr).
- tools/utility.audit_recent_traffic: rewrite docstring so it matches
  the actual count-only behaviour; window_seconds is documentary.
- tools/testing.py: refresh module docstring to list all 7 tools
  rather than just the original two.
- tools/report/builders.py: type-hint format_poc_request and
  format_repro_steps inputs.
- tools/report/severity.py: fix open-redirect cap — code now reads
  LOW (matches the prior comment that disagreed with the value).
- processing/formatters.py: range string is half-open; show the
  inclusive end index instead.
- tools/recon/_common.py: keep -1 / kill-signal returncodes from being
  coerced to 0 